--- a/TV SHOW POPULARITY ANALYSIS SYSTEM/index.html
+++ b/TV SHOW POPULARITY ANALYSIS SYSTEM/index.html
@@ -1,1 +1,39 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>TV SHOW POPULARITY ANALYSIS SYSTEM</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+    <style>
+body {
+  background-image: url('background.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+<body>
+	<div class="main">
+		<div class="overlay"></div>
+		<div class="navbar">
+			<div class="logo">MODERNA</div>
+			<ul>
+				<li><a href="#">HOME</a></li>
+				<li><a href="#">SHOWS LIST</a></li>
+                <li><a href="#">TOP SHOWS</a></li>
+				<li><a href="login.html">ADMIN</a></li>
+				<li><a href="#">ABOUT US</a></li>
+				<li><a href="#">CONTACT US</a></li>
+			</ul>
+		</div>
+		<div class="heading">
+				<h1 class="head">WELCOME TO MODERNA</h1>
+				<h3 class="sub">An all in one place to check the credibility of all your favoutite TV Shows.<br>Click below to get redirected to visitor dashboard page</h3>	
+				<div class="btns">
+					<a class="btn1" href="#">DASHBOARD</a>
+					<a class="btn2" href="login.html">ADMIN LOGIN</a>
+				</div>	
+		</div>
+	</div>	
+</body>
+</html>
